--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
 <body>
 <div id="container">
   <header>
-    <h1 id="header-title">Metric/Imperial Unit Conversion</h1>
-    <div id="header-number-container">
-      <input id="header-number-value" placeholder="20">
+    <h1 id="title">Metric/Imperial Unit Conversion</h1>
+    <div id="number-container">
+      <input id="number-el" placeholder="0">
     </div>
-    <button id="header-convert-btn">Convert</button>
+    <button id="convert-btn">Convert</button>
   </header>
   <main>
-    <section id="main-length-container" class="unit-container">
-      <h2 id="main-length-title" class="unit-title">Length (Meter/Feet)</h2>
-      <p id="main-length-text" class="unit-text">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+    <section id="length-container" class="unit-container">
+      <h2 id="length-title" class="unit-title">Length (Meter/Feet)</h2>
+      <p id="length-text-el" class="unit-text">0 meters = 0 feet | 0 feet = 0 meters</p>
     </section>
-    <section id="main-volume-container" class="unit-container">
-      <h2 id="main-volume-title" class="unit-title">Volume (Liters/Gallons)</h2>
-      <p id="main-volume-text" class="unit-text">20 liters = 5.284 gallons | 20 gallons = 75.708 liters</p>
+    <section id="volume-container" class="unit-container">
+      <h2 id="volume-title" class="unit-title">Volume (Liters/Gallons)</h2>
+      <p id="volume-text-el" class="unit-text">0 liters = 0 gallons | 0 gallons = 0 liters</p>
     </section>
-    <section id="main-mass-container" class="unit-container">
-      <h2 id="main-mass-title" class="unit-title">Mass (Kilograms/Pounds)</h2>
-      <p id="main-mass-text" class="unit-text">20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</p>
+    <section id="mass-container" class="unit-container">
+      <h2 id="mass-title" class="unit-title">Mass (Kilograms/Pounds)</h2>
+      <p id="mass-text-el" class="unit-text">0 kilos = 0 pounds | 0 pounds = 0 kilos</p>
     </section>
   </main>
 </div>
+<script src="index.js"></script>
 </body>
 </html>
