--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 <div id="container">
   <header>
-    <h1 id="title">Metric/Imperial Unit Conversion</h1>
+    <h2 id="title">Metric/Imperial Unit Conversion</h2>
     <div id="number-container">
-      <input id="number-el" placeholder="0">
+      <input type="number" id="number-el" placeholder="0">
     </div>
     <button id="convert-btn">Convert</button>
   </header>
