Incorporate suggestions from code review: imporve accessibility with label and hover/focus, catch negative numbers, be consistent with naming consts, and improve naming for better readability

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
 <div id="container">
   <header>
-    <h2 id="title">Metric/Imperial Unit Conversion</h2>
+    <h1 id="title">Metric/Imperial Unit Conversion</h1>
     <div id="number-container">
-      <input type="number" id="number-el" placeholder="0">
+      <label id="number-label-el">Enter number to convert:</label>
+      <input type="number" min="0" id="number-el" placeholder="0">
     </div>
     <button id="convert-btn">Convert</button>
   </header>
